Changed breadcrumb's into buttons which break on re-size. Added IE condtional stylesheet and fixed navigation.

--- a/sass/blocks.scss
+++ b/sass/blocks.scss
@@ -38,7 +38,7 @@ h2.block-title { /* Block title */
 #block-block-1 { /* First block created with "Add block" link */
   margin-top: 1em;
   margin-bottom: 2.5em;
-
+  clear: left;
   p {
     margin: 0.3em 0 0 0;
   }
