--- a/sass/normalize.scss
+++ b/sass/normalize.scss
@@ -132,6 +132,10 @@ html {
   -ms-text-size-adjust: 100%; /* 2 */
   /* Establishes a vertical rhythm unit using $base-line-height. */
   @include adjust-leading-to(1);
+  
+  -ms-word-break: break-all; 
+  word-break: break-all; 
+  word-break: break-word; /* old webkit */ 
 }
 
 /*
